[package]
authors = ["Allen <809721414@qq.com>"]
description = "常用正则表达式合集"
documentation = "https://docs.rs/regex-collection/latest/regex_collection"
edition = "2021"
homepage = "https://crates.io/crates/regex-collection"
license = "MIT OR Apache-2.0"
name = "regex-collection"
readme = "README.md"
version = "0.1.3"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
